<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/country"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="2"
        android:elevation="2dp"
        android:gravity="start"
        android:padding="4dp"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:text="@string/country_column_name"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/user_answer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_answer"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_weight="2"
        android:elevation="2dp"
        android:gravity="start"
        android:padding="4dp"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:text="@string/user_answer_column_name"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/country"
        app:layout_constraintEnd_toStartOf="@+id/correct_answer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/country" />

    <TextView
        android:id="@+id/correct_answer"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_weight="2"
        android:elevation="2dp"
        android:gravity="start"
        android:padding="4dp"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:text="@string/correct_answer_column_name"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/user_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/user_answer" />

</androidx.constraintlayout.widget.ConstraintLayout>